# fit_rl_mab

./: .gitignore  Makefile  README.md  pyproject.toml
basic_forget_qlearning/notebooks/: figures.ipynb  tables.ipynb
basic_forget_qlearning/src/: cvx.py  cvx_truc.py  direct.py  generate_data.py  mc.py
multi_lr_rew/notebooks/: figures.ipynb  tables.ipynb
multi_lr_rew/src/: cvx.py  cvx_truc.py  direct.py  generate_data.py  mc.py  utils.py
subrew_subvalue/notebooks/: figures.ipynb  tables.ipynb
subrew_subvalue/src/: cvx.py  cvx_truc.py  direct.py  generate_data.py  mc.py  utils.py
